<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kummerkasten</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="meldung">Meldung</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="betreff">Betreff</string>
    <string name="adresse">Adresse</string>
    <string name="bezirk">Bezirk</string>
    <string name="kategorie">Kategorie</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="bildanhang">Bildanhang</string>
    <string name="spamschutz">Spamschutz</string>

    <string-array name="type_array">
        <item>Gefahrenstelle</item>
        <item>Lueckenschluss</item>
        <item>Radabstellanlage</item>
        <item>Ampelschaltung</item>
        <item>Fahrbahnzustand</item>
        <item>Schneeraeumung</item>
        <item>Anderes</item>
    </string-array>

</resources>
